# force_awakens

./: README.md  _config.yaml  config.yaml  create_colors.py  elements_in_space.csv  exoplanets_data.csv  imgui.ini  pyproject.toml  requirements.txt  setup.py  stars_data.csv  stars_select_test.py
docs/: banner.xcf  logo.xcf
drafts/: app_64_body.py  bloom_test.py  matmul_test.py
drafts/frontend/: index.html  qr_ngrok.py  server.py
force_awakens/: __main__.py  app.py  app_copy.py  draw_copy.py  rgb.txt
force_awakens/graphics/: draw.py  fragment_shader.glsl  render.py  shader.py  vertex_shader.glsl
force_awakens/mechanics/: colors.py  elements_in_space.csv  mechanics.py
force_awakens/web/: index.html  server.py
